# casper-db-utils

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci-casper-db-utils.yml  nightly-scheduled-test.yml  publish-casper-db-utils-deb.yml
src/: check.rs  common.rs  lib.rs  logging.rs  main.rs  subcommands.rs  test_utils.rs  trie_compact.rs
src/common/: db.rs  lmdb_utils.rs  progress.rs
src/common/db/: block_body_db.rs  block_body_merkle_db.rs  block_metadata_db.rs  deploy_hashes_db.rs  deploy_metadata_db.rs  deploys_db.rs  state_store_db.rs  tests.rs  transfer_hashes_db.rs
src/db/: block_body_db.rs  block_body_merkle_db.rs  block_header_db.rs  block_metadata_db.rs  deploy_hashes_db.rs  deploy_metadata_db.rs  deploys_db.rs  finalized_approvals_db.rs  helpers.rs  mod.rs  proposers_db.rs  state_store_db.rs  tests.rs  transfer_db.rs  transfer_hashes_db.rs
src/subcommands/: archive.rs  archive_get.rs  check.rs  execution_results_summary.rs  extract_slice.rs  latest_block.rs  latest_block_summary.rs  purge_signatures.rs  remove_block.rs  trie_compact.rs  unsparse.rs  unsparsify.rs
src/subcommands/archive/: create.rs  ring_buffer.rs  tar_utils.rs  unpack.rs  zstd_utils.rs
src/subcommands/archive/create/: pack.rs  tests.rs  zstd_encode.rs
src/subcommands/archive/unpack/: download_stream.rs  file_stream.rs  tests.rs  zstd_decode.rs
src/subcommands/archive_get/: download_stream.rs  tests.rs  zstd_decode.rs
src/subcommands/check/: db.rs
src/subcommands/check/db/: block_header_db.rs  finalized_approvals_db.rs  proposers_db.rs  tests.rs  transfer_db.rs
src/subcommands/execution_results_summary/: block_body.rs  read_db.rs  summary.rs  tests.rs
src/subcommands/extract_slice/: db_helpers.rs  extract.rs  global_state.rs  storage.rs  tests.rs
src/subcommands/latest_block/: block_info.rs  read_db.rs  tests.rs
src/subcommands/latest_block_summary/: block_info.rs  read_db.rs  tests.rs
src/subcommands/purge_signatures/: block_signatures.rs  purge.rs  signatures.rs  tests.rs
src/subcommands/remove_block/: remove.rs  tests.rs
src/subcommands/trie_compact/: compact.rs  helpers.rs  tests.rs  utils.rs
src/test/: mod.rs
src/trie_compact/: compact.rs  helpers.rs  mod.rs  tests.rs  utils.rs
