[package]
name = "casper-db-utils"
version = "0.1.0"
authors = ["George Pisaltu <georgep@casperlabs.io>"]
edition = "2021"
description = "Utilities for working with databases of the Casper blockchain."
documentation = "https://docs.rs/casper-db-utils"
readme = "README.md"
homepage = "https://casperlabs.io"
repository = "https://github.com/casper-network/casper-db-utils"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
bincode = "1"
casper-execution-engine = "2"
casper-hashing = "1"
casper-node = "1"
casper-types = "1"
clap = { version = "3", features = ["cargo"] }
futures = "0.3.21"
lmdb = "0.8.0"
lmdb-sys = "0.8.0"
log = "0.4.17"
once_cell = "1"
reqwest = { version = "0.11.10", features = ["stream"] }
ringbuf = "0.2.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.12.0"
tar = "0.4.38"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
zstd = "0.11.2"

[dev-dependencies]
once_cell = "1"
rand = "0.8.5"
tempfile = "3"

[package.metadata.deb]
assets = [
    ["./target/release/casper-db-utils", "/usr/bin/casper-db-utils", "755"],
]
extended-description = """
Package for Casper DB Utils

For information on using package, see https://github.com/casper-network/casper-db-utils
"""